# projected-observers

./: .gitignore  LICENSE  README.md  TUTORIAL.md  pyproject.toml  requirements.txt
docs/: FOLLOWUP_RESEARCH_ROADMAP.md  G4_LINUX_GPU_RUNBOOK.md  GPU_BACKEND_PLAN.md  M8E_cross_source_mechanism_spec.md  M8_classifier_audit.md  M8_plot_inventory.md  PERFORMANCE_STRATEGY_PYTHON.md  STAGE6_FRESH_SEED_REPLICATION_PLAN.md  STAGE6_REPLICATION_SUMMARY.md  TEST_PERFORMANCE.md
observer_worlds/: __init__.py
scripts/: g4_compare_to_stage6c.py  g4_linux_bootstrap.sh  profile_production_run.py
tests/: test_agent_tasks.py  test_boundaries.py  test_ca4d_kernels.py  test_causality_score.py  test_components.py  test_fractional_rules.py  test_g4_linux_bootstrap.py  test_g5_discovery.py  test_gpu_backend.py  test_hidden_identity_swap.py  test_m2_pipeline.py  test_m4b_stats.py  test_m4b_sweep_parity.py  test_m4d_holdout.py  test_m5_interventions.py  test_m6_hidden_causal.py  test_m6b_hidden_controls.py  test_m6b_parallel_parity.py  test_m6c_parallel_parity.py  test_m6c_taxonomy.py  test_m7_hce_search.py  test_m7b_production.py  test_m8_mechanism.py  test_m8_parallel_parity.py  test_m8b_spatial.py  test_m8c_validation.py  test_m8d_decomposition.py  test_m8g_revised_mechanisms.py  test_memory_score.py  test_observer_score.py  test_observer_search.py  test_observer_search_2d.py  test_perf_profiler.py  test_plot_artifacts_documented.py  test_projection.py  test_projection_invisible_perturbations.py  test_projection_robustness.py  test_projection_robustness_gpu.py  test_projection_suite.py  (+8 more)
(+149 files in other folders)
