[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observer_worlds"
version = "0.1.0"
description = "4D-to-2D artificial-life framework for testing functional observer-likeness in projected lower-dimensional structures."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "William Lawrence Avery"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "numba>=0.58",
    "zarr>=2.16,<3",
    "imageio>=2.31",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["observer_worlds*"]
